@@ -1,6 +1,7 @@
 Development Portal (2025-01-09 shi)
 ==============================
 Add social icons to footer
+Update main_head for original and white versions
 
 
 Development Portal (2025-01-08 shi)
